third_party/move/move-compiler-v2/tests/uninit-use-checker/v1-locals/use_before_assign_while.exp
============ bytecode before first stackless bytecode pipeline ================

[variant baseline]
fun M::tborrow1($t0: bool) {
     var $t1: u64
     var $t2: &u64
     var $t3: &u64
     var $t4: &u64
     var $t5: u64
  0: label L0
  1: if ($t0) goto 2 else goto 9
  2: label L2
  3: $t2 := borrow_local($t1)
  4: $t3 := move($t2)
  5: $t4 := infer($t3)
  6: $t5 := 0
  7: $t1 := infer($t5)
  8: goto 11
  9: label L3
 10: goto 13
 11: label L4
 12: goto 0
 13: label L1
 14: return ()
}


[variant baseline]
fun M::tborrow2($t0: bool) {
     var $t1: u64
     var $t2: &u64
     var $t3: &u64
     var $t4: &u64
     var $t5: u64
  0: label L0
  1: if ($t0) goto 2 else goto 15
  2: label L2
  3: $t2 := borrow_local($t1)
  4: $t3 := move($t2)
  5: $t4 := infer($t3)
  6: if ($t0) goto 7 else goto 11
  7: label L5
  8: $t5 := 0
  9: $t1 := infer($t5)
 10: goto 12
 11: label L6
 12: label L7
 13: goto 19
 14: goto 17
 15: label L3
 16: goto 19
 17: label L4
 18: goto 0
 19: label L1
 20: return ()
}


[variant baseline]
fun M::tcopy($t0: bool) {
     var $t1: u64
     var $t2: u64
     var $t3: u64
     var $t4: u64
     var $t5: u64
     var $t6: u64
  0: label L0
  1: if ($t0) goto 2 else goto 16
  2: label L2
  3: $t3 := move($t1)
  4: $t4 := 1
  5: $t2 := +($t3, $t4)
  6: if ($t0) goto 7 else goto 10
  7: label L5
  8: goto 0
  9: goto 11
 10: label L6
 11: label L7
 12: $t5 := 0
 13: $t1 := infer($t5)
 14: $t6 := infer($t2)
 15: goto 18
 16: label L3
 17: goto 20
 18: label L4
 19: goto 0
 20: label L1
 21: return ()
}


[variant baseline]
fun M::tmove($t0: bool) {
     var $t1: u64
     var $t2: u64
     var $t3: u64
     var $t4: u64
     var $t5: u64
     var $t6: u64
  0: label L0
  1: if ($t0) goto 2 else goto 10
  2: label L2
  3: $t3 := move($t1)
  4: $t4 := 1
  5: $t2 := +($t3, $t4)
  6: $t5 := 0
  7: $t1 := infer($t5)
  8: $t6 := infer($t2)
  9: goto 12
 10: label L3
 11: goto 14
 12: label L4
 13: goto 0
 14: label L1
 15: return ()
}


Diagnostics:
error: use of possibly unassigned local `x`
  ┌─ tests/uninit-use-checker/v1-locals/use_before_assign_while.move:4:32
  │
4 │         while (cond) { let y = move x + 1; x = 0; y; }
  │                                ^^^^^^

error: use of possibly unassigned local `x`
  ┌─ tests/uninit-use-checker/v1-locals/use_before_assign_while.move:9:32
  │
9 │         while (cond) { let y = move x + 1; if (cond) { continue }; x = 0; y; }
  │                                ^^^^^^

error: use of possibly unassigned local `x`
   ┌─ tests/uninit-use-checker/v1-locals/use_before_assign_while.move:14:32
   │
14 │         while (cond) { let y = &x; _ = move y; x = 0 }
   │                                ^^

error: use of unassigned local `x`
   ┌─ tests/uninit-use-checker/v1-locals/use_before_assign_while.move:19:32
   │
19 │         while (cond) { let y = &x; _ = move y; if (cond) { x = 0 }; break }
   │                                ^^

============ after uninitialized_use_checker: ================

[variant baseline]
fun M::tborrow1($t0: bool) {
     var $t1: u64
     var $t2: &u64
     var $t3: &u64
     var $t4: &u64
     var $t5: u64
     # before: { maybe: $t1, $t2, $t3, $t4, $t5 }, after: { maybe: $t1, $t2, $t3, $t4, $t5 }
  0: label L0
     # before: { maybe: $t1, $t2, $t3, $t4, $t5 }, after: { maybe: $t1, $t2, $t3, $t4, $t5 }
  1: if ($t0) goto 2 else goto 9
     # before: { maybe: $t1, $t2, $t3, $t4, $t5 }, after: { maybe: $t1, $t2, $t3, $t4, $t5 }
  2: label L2
     # before: { maybe: $t1, $t2, $t3, $t4, $t5 }, after: { maybe: $t1, $t3, $t4, $t5 }
  3: $t2 := borrow_local($t1)
     # before: { maybe: $t1, $t3, $t4, $t5 }, after: { maybe: $t1, $t4, $t5 }
  4: $t3 := move($t2)
     # before: { maybe: $t1, $t4, $t5 }, after: { maybe: $t1, $t5 }
  5: $t4 := infer($t3)
     # before: { maybe: $t1, $t5 }, after: { maybe: $t1 }
  6: $t5 := 0
     # before: { maybe: $t1 }, after: all initialized
  7: $t1 := infer($t5)
     # before: all initialized, after: all initialized
  8: goto 11
     # before: { maybe: $t1, $t2, $t3, $t4, $t5 }, after: { maybe: $t1, $t2, $t3, $t4, $t5 }
  9: label L3
     # before: { maybe: $t1, $t2, $t3, $t4, $t5 }, after: { maybe: $t1, $t2, $t3, $t4, $t5 }
 10: goto 13
     # before: all initialized, after: all initialized
 11: label L4
     # before: all initialized, after: all initialized
 12: goto 0
     # before: { maybe: $t1, $t2, $t3, $t4, $t5 }, after: { maybe: $t1, $t2, $t3, $t4, $t5 }
 13: label L1
     # before: { maybe: $t1, $t2, $t3, $t4, $t5 }, after: { maybe: $t1, $t2, $t3, $t4, $t5 }
 14: return ()
}


[variant baseline]
fun M::tborrow2($t0: bool) {
     var $t1: u64
     var $t2: &u64
     var $t3: &u64
     var $t4: &u64
     var $t5: u64
     # before: { no: $t1, $t2, $t3, $t4, $t5 }, after: { no: $t1, $t2, $t3, $t4, $t5 }
  0: label L0
     # before: { no: $t1, $t2, $t3, $t4, $t5 }, after: { no: $t1, $t2, $t3, $t4, $t5 }
  1: if ($t0) goto 2 else goto 15
     # before: { no: $t1, $t2, $t3, $t4, $t5 }, after: { no: $t1, $t2, $t3, $t4, $t5 }
  2: label L2
     # before: { no: $t1, $t2, $t3, $t4, $t5 }, after: { no: $t1, $t3, $t4, $t5 }
  3: $t2 := borrow_local($t1)
     # before: { no: $t1, $t3, $t4, $t5 }, after: { no: $t1, $t4, $t5 }
  4: $t3 := move($t2)
     # before: { no: $t1, $t4, $t5 }, after: { no: $t1, $t5 }
  5: $t4 := infer($t3)
     # before: { no: $t1, $t5 }, after: { no: $t1, $t5 }
  6: if ($t0) goto 7 else goto 11
     # before: { no: $t1, $t5 }, after: { no: $t1, $t5 }
  7: label L5
     # before: { no: $t1, $t5 }, after: { no: $t1 }
  8: $t5 := 0
     # before: { no: $t1 }, after: all initialized
  9: $t1 := infer($t5)
     # before: all initialized, after: all initialized
 10: goto 12
     # before: { no: $t1, $t5 }, after: { no: $t1, $t5 }
 11: label L6
     # before: { maybe: $t1, $t5 }, after: { maybe: $t1, $t5 }
 12: label L7
     # before: { maybe: $t1, $t5 }, after: { maybe: $t1, $t5 }
 13: goto 19
 14: goto 17
     # before: { no: $t1, $t2, $t3, $t4, $t5 }, after: { no: $t1, $t2, $t3, $t4, $t5 }
 15: label L3
     # before: { no: $t1, $t2, $t3, $t4, $t5 }, after: { no: $t1, $t2, $t3, $t4, $t5 }
 16: goto 19
 17: label L4
 18: goto 0
     # before: { maybe: $t1, $t2, $t3, $t4, $t5 }, after: { maybe: $t1, $t2, $t3, $t4, $t5 }
 19: label L1
     # before: { maybe: $t1, $t2, $t3, $t4, $t5 }, after: { maybe: $t1, $t2, $t3, $t4, $t5 }
 20: return ()
}


[variant baseline]
fun M::tcopy($t0: bool) {
     var $t1: u64
     var $t2: u64
     var $t3: u64
     var $t4: u64
     var $t5: u64
     var $t6: u64
     # before: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }, after: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }
  0: label L0
     # before: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }, after: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }
  1: if ($t0) goto 2 else goto 16
     # before: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }, after: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }
  2: label L2
     # before: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }, after: { maybe: $t1, $t2, $t4, $t5, $t6 }
  3: $t3 := move($t1)
     # before: { maybe: $t1, $t2, $t4, $t5, $t6 }, after: { maybe: $t1, $t2, $t5, $t6 }
  4: $t4 := 1
     # before: { maybe: $t1, $t2, $t5, $t6 }, after: { maybe: $t1, $t5, $t6 }
  5: $t2 := +($t3, $t4)
     # before: { maybe: $t1, $t5, $t6 }, after: { maybe: $t1, $t5, $t6 }
  6: if ($t0) goto 7 else goto 10
     # before: { maybe: $t1, $t5, $t6 }, after: { maybe: $t1, $t5, $t6 }
  7: label L5
     # before: { maybe: $t1, $t5, $t6 }, after: { maybe: $t1, $t5, $t6 }
  8: goto 0
  9: goto 11
     # before: { maybe: $t1, $t5, $t6 }, after: { maybe: $t1, $t5, $t6 }
 10: label L6
     # before: { maybe: $t1, $t5, $t6 }, after: { maybe: $t1, $t5, $t6 }
 11: label L7
     # before: { maybe: $t1, $t5, $t6 }, after: { maybe: $t1, $t6 }
 12: $t5 := 0
     # before: { maybe: $t1, $t6 }, after: { maybe: $t6 }
 13: $t1 := infer($t5)
     # before: { maybe: $t6 }, after: all initialized
 14: $t6 := infer($t2)
     # before: all initialized, after: all initialized
 15: goto 18
     # before: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }, after: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }
 16: label L3
     # before: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }, after: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }
 17: goto 20
     # before: all initialized, after: all initialized
 18: label L4
     # before: all initialized, after: all initialized
 19: goto 0
     # before: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }, after: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }
 20: label L1
     # before: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }, after: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }
 21: return ()
}


[variant baseline]
fun M::tmove($t0: bool) {
     var $t1: u64
     var $t2: u64
     var $t3: u64
     var $t4: u64
     var $t5: u64
     var $t6: u64
     # before: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }, after: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }
  0: label L0
     # before: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }, after: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }
  1: if ($t0) goto 2 else goto 10
     # before: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }, after: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }
  2: label L2
     # before: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }, after: { maybe: $t1, $t2, $t4, $t5, $t6 }
  3: $t3 := move($t1)
     # before: { maybe: $t1, $t2, $t4, $t5, $t6 }, after: { maybe: $t1, $t2, $t5, $t6 }
  4: $t4 := 1
     # before: { maybe: $t1, $t2, $t5, $t6 }, after: { maybe: $t1, $t5, $t6 }
  5: $t2 := +($t3, $t4)
     # before: { maybe: $t1, $t5, $t6 }, after: { maybe: $t1, $t6 }
  6: $t5 := 0
     # before: { maybe: $t1, $t6 }, after: { maybe: $t6 }
  7: $t1 := infer($t5)
     # before: { maybe: $t6 }, after: all initialized
  8: $t6 := infer($t2)
     # before: all initialized, after: all initialized
  9: goto 12
     # before: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }, after: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }
 10: label L3
     # before: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }, after: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }
 11: goto 14
     # before: all initialized, after: all initialized
 12: label L4
     # before: all initialized, after: all initialized
 13: goto 0
     # before: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }, after: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }
 14: label L1
     # before: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }, after: { maybe: $t1, $t2, $t3, $t4, $t5, $t6 }
 15: return ()
}
